--- a/week-07/day-2/Table.html
+++ b/week-07/day-2/Table.html
@@ -2,9 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Table Exercise</title>
+    <link rel="stylesheet" href="TableStyle.css">
 </head>
 <body>
-
+<table>
+    <tr>
+        <th>Month</th>
+        <th>Sales</th>
+    </tr>
+    <tr>
+        <td>January</td>
+        <td>$ 50,000.00</td>
+    </tr>
+    <tr>
+        <td>February</td>
+        <td>$ 10,000.00</td>
+    </tr>
+    <tr>
+        <td>March</td>
+        <td>$ 85,000.00</td>
+    </tr>
+    <tr>
+        <td>April</td>
+        <td>$ 56,000.00</td>
+    </tr>
+    <tr>
+        <td>May</td>
+        <td>$ 98,000.00</td>
+    </tr>
+</table>
 </body>
 </html>
