--- a/week-07/day-2/Table.html
+++ b/week-07/day-2/Table.html
@@ -11,23 +11,23 @@
         <th>Month</th>
         <th>Sales</th>
     </tr>
-    <tr>
+    <tr class="row">
         <td>January</td>
         <td>$ 50,000.00</td>
     </tr>
-    <tr>
+    <tr class="row">
         <td>February</td>
         <td>$ 10,000.00</td>
     </tr>
-    <tr>
+    <tr class="row">
         <td>March</td>
         <td>$ 85,000.00</td>
     </tr>
-    <tr>
+    <tr class="row">
         <td>April</td>
         <td>$ 56,000.00</td>
     </tr>
-    <tr>
+    <tr class="row">
         <td>May</td>
         <td>$ 98,000.00</td>
     </tr>
